--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-266.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-548.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 台湾-10.43MB/s(Youtube:不良林), server: 61.222.202.140, port: 33792, type: vmess, uuid: e55cd182-01b0-4fb7-a510-363701a491c5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 61.222.202.140}}
+  - {name: 🇨🇦 加拿大-1.95MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-257.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 167.88.63.79, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-312.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-3.81MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 未知国家-150.6KB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
-  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇬🇧 英国-1.40MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
-  - {name: 🇺🇸 美国-4.22MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: da866fba-02c4-11ed-ac82-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
-  - {name: 未知国家-2.70MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
-  - {name: 🇺🇸 美国-4.54MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 未知国家-3.20MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: da866fba-02c4-11ed-ac82-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
+  - {name: 未知国家-2.67MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
+  - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-266.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
       - 未知国家-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 未知国家-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-266.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
       - 未知国家-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 未知国家-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-266.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
       - 未知国家-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 未知国家-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-266.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
       - 未知国家-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 未知国家-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-266.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
       - 未知国家-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 未知国家-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-266.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
       - 未知国家-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 未知国家-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-266.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
       - 未知国家-150.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 未知国家-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
