--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇸🇬 新加坡-2.09MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35214, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.77MB/s(Youtube:不良林), server: jp.v2yyds.cc, port: 35212, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: jp.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-274.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-312.2KB/s(Youtube:不良林), server: jp.v2yyds.cc, port: 35213, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: jp.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: 167.88.63.79, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-257.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-324.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-298.1KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-2.39MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
   - {name: 未知国家-3.20MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
   - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: da866fba-02c4-11ed-ac82-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
-  - {name: 未知国家-2.67MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
-  - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
       - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 未知国家-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
       - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 未知国家-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
       - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 未知国家-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
       - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 未知国家-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
       - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 未知国家-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
       - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 未知国家-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-312.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
+      - 未知国家-2.39MB/s(Youtube:不良林)
       - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 未知国家-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
